--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Freelancer - Theme preview</title>
-  <link rel="shortcut icon" href="../assest/favicon.s" type="image/x-icon">
+  <title>Bootstrap-1</title>
+  <link rel="shortcut icon" href="https://th.bing.com/th?id=OIP.jsvEq8iLY5AGCXt-tpx15wHaHa&w=250&h=250&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./assest/font-awesome-4.7.0 (1)/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/style1.css">
