--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section style="margin-top:60px;" class="portfolio" id="port">
       <div id="PORTFOLIO" class="container">
         <div style="font-weight: bold;font-size: 50px;text-align: center;margin-bottom: 20px;">
-          <div>PORTFOLIOs</div>
+          <div>PORTFOLIO</div>
           <div class="justify-content-center d-flex my-3">
             <div class="parentLine" style="display: flex;">
               <hr class="line"><i class="fa fa-star " style="flex: 1;" aria-hidden="true"></i><hr class="line">
