--- a/index.html
+++ b/index.html
@@ -126,10 +126,11 @@
 
         </div>
         <div class="section3">
-          <button class="btn btn-light p-3 text-white"><i class="fa fa-download p-2 text-white" aria-hidden="true"></i>Free Download!</button>
+          <button style="cursor: not-allowed;" class="btn btn-light p-3 text-white"><i class="fa fa-download p-2 text-white" aria-hidden="true"></i>Free Download!</button>
         </div>
       </div>
     </section>
+
     <section id="CONTACT" class="mt-5 bg-">
       <div style="font-size: 50px;font-weight: bold;text-align: center;">
         <div>CONTACT ME</div>
@@ -159,7 +160,7 @@
             </div>
           </div>
           <div style="margin-top: 20px;text-align: center;">
-            <button class="d-flex justify-content-start" style="padding:15px 30px; background-color: #1abc9c;" class="btn btn-success ">Send</button>
+            <button class="d-flex justify-content-start" style="padding:15px 30px; background-color: #1abc9c; cursor:not-allowed;" class="btn btn-success ">Send</button>
           </div>
     </section>
   </section>
@@ -168,9 +169,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 mb-5">
-          <div>LOCATION</div>
-          <div class="mt-3">2215 John Daniel Drive
-            Clark, MO 65243</div>
+          <div>ABOUT :</div>
+          <div class="mt-3">R.Dhinesh Kumar<br>9944134460 <br>dhinesh4460@gmail.com 
+          </div>
         </div>
         <div class="col-lg-4 mb-5">
           <div>AROUND THE WEB</div>
